[v4] package/uutils-coreutils: new package
This package is an implementation of coreutils written entirely in Rust.

Currently defined functions:

    [, b2sum, b3sum, base32, base64, basename, basenc, cat, cksum, comm, cp, csplit, cut, date,
    dd, df, dir, dircolors, dirname, du, echo, env, expand, expr, factor, false, fmt, fold,
    hashsum, head, join, link, ln, ls, md5sum, mkdir, mktemp, more, mv, nl, numfmt, od, paste,
    pr, printenv, printf, ptx, pwd, readlink, realpath, rm, rmdir, seq, sha1sum, sha224sum,
    sha256sum, sha3-224sum, sha3-256sum, sha3-384sum, sha3-512sum, sha384sum, sha3sum,
    sha512sum, shake128sum, shake256sum, shred, shuf, sleep, sort, split, sum, tac, tail, tee,
    test, touch, tr, true, truncate, tsort, unexpand, uniq, unlink, vdir, wc, yes

This is a continuation of the work started in [1] and [2], which introduces:

- fresh version of uutils-coreutils
- build fixes and improvements
- flag to enable/disable the multicall binary

Links:

[1] https://patchwork.ozlabs.org/project/buildroot/patch/20230317151802.1242858-1-sebastian.weyer@smile.fr/
[2] https://patchwork.ozlabs.org/project/buildroot/patch/20241208134004.143901-1-shirokovalexs@gmail.com/

--- a/package/coreutils/Config.in
+++ b/package/coreutils/Config.in
@@ -3,6 +3,7 @@ config BR2_PACKAGE_COREUTILS
 	depends on BR2_USE_WCHAR
 	depends on BR2_USE_MMU # fork()
 	depends on BR2_PACKAGE_BUSYBOX_SHOW_OTHERS
+	depends on !BR2_PACKAGE_UUTILS_COREUTILS
 	help
 	  All of the basic file/text/shell utilities. These are the
 	  core utilities which are expected to exist on every system.
