--- a/package/Config.in
+++ b/package/Config.in
@@ -2970,6 +2970,7 @@ menu "Text editors and viewers"
 	source "package/nano/Config.in"
 	source "package/uemacs/Config.in"
 	source "package/vim/Config.in"
+	source "package/helix/Config.in"
 endmenu
 
 endmenu
