--- a/package/Config.in
+++ b/package/Config.in
@@ -2805,6 +2805,7 @@ comment "Utilities"
 	source "package/lowdown/Config.in"
 	source "package/minisign/Config.in"
 	source "package/neofetch/Config.in"
+	source "package/nnn/Config.in"
 	source "package/pdmenu/Config.in"
 	source "package/pinentry/Config.in"
 	source "package/qprint/Config.in"
