--- a/package/nnn/Config.in
+++ b/package/nnn/Config.in
@@ -2,7 +2,7 @@ config BR2_PACKAGE_NNN
 	bool "nnn"
 	depends on BR2_PACKAGE_READLINE
 	help
-	  nnn is a full-featured terminal file manager. It's tiny,
-	  nearly 0-config and incredibly fast.
+	  nnn is a lightweight yet powerful terminal file manager that
+	  works out of the box.
 
 	  https://github.com/jarun/nnn
