--- a/package/nnn/Config.in
+++ b/package/nnn/Config.in
@@ -1,6 +1,7 @@
 config BR2_PACKAGE_NNN
 	bool "nnn"
 	depends on BR2_PACKAGE_READLINE
+	select BR2_PACKAGE_HOST_PKGCONF
 	help
 	  nnn is a lightweight yet powerful terminal file manager that
 	  works out of the box.
