--- a/package/Config.in
+++ b/package/Config.in
@@ -2786,6 +2786,7 @@ menu "Shell and utilities"
 comment "Shells"
 	source "package/bash/Config.in"
 	source "package/dash/Config.in"
+	source "package/fish/Config.in"
 	source "package/mksh/Config.in"
 	source "package/nushell/Config.in"
 	source "package/zsh/Config.in"
