helix:update comments & descriptions

--- a/package/helix/Config.in
+++ b/package/helix/Config.in
@@ -5,6 +5,13 @@ config BR2_PACKAGE_HELIX
 	help
 	  A Kakoune / Neovim inspired editor, written in Rust.
 
+	  Provides efficient navigation, a fuzzy finder for jumping to
+	  files and symbols, multiple cursors, surround editing, theming
+	  support, and more.
+
+	  Most functionality is available out of the box with no
+	  additional configuration.
+
 	  https://helix-editor.com/
 
 if BR2_PACKAGE_HELIX
@@ -14,7 +21,7 @@ config BR2_PACKAGE_HELIX_INSTALL_THEMES
 	default y
 	help
 	  Install color themes. This option adds about 1MB of data
-	  to /usr/lib/helix/runtime
+	  to /usr/share/helix/runtime
 
 config BR2_PACKAGE_HELIX_INSTALL_GRAMMARS
 	bool "build grammars"
@@ -22,7 +29,7 @@ config BR2_PACKAGE_HELIX_INSTALL_GRAMMARS
 	help
 	  Use this flag to build and install tree-sitter grammars.
 	  This option adds about 200MB (all grammars) of data to
-	  /usr/lib/helix/runtime.
+	  /usr/share/helix/runtime.
 
 	  PLEASE NOTE: The process is currently unstable. Enable this
 	  flag only if you intend to stabilize and improve the grammar
