package/aichat:new package
AIChat helps seamlessly integrate different LLM models, providing access
via the CLI and network. It can serve as a gateway to heterogeneous and
distributed LLMs.

Handy features like roles, macros, and sessions help simplify repetitive
tasks and reuse of existing solutions. Features like playgrounds and
arenas help to explore and compare models.

https://github.com/sigoden/AIChat

Signed-off-by: Alexander Shirokov <shirokovalexs@gmail.com>

--- a/package/Config.in
+++ b/package/Config.in
@@ -164,6 +164,7 @@ menu "Debugging, profiling and benchmark"
 endmenu
 
 menu "Development tools"
+	source "package/aichat/Config.in"
 	source "package/avocado/Config.in"
 	source "package/bats-core/Config.in"
 	source "package/binutils/Config.in"
