package/nnn: new package
nnn is a fast and minimal text-based file manager. It is written in C
and has minimal dependencies, which makes it portable and suitable for
embedded systems.

Project page: https://github.com/jarun/nnn
Wiki: https://en.wikipedia.org/wiki/Nnn_(file_manager)

Signed-off-by: Alexander Shirokov <shirokovalexs@gmail.com>

---
Changes v1 -> v2:
  - Updating dependencies and selecting "ncurses" flags
  - Using "readline" as an optional dependency
  - Simplifying build and installation steps
  - Fixing the package version
  - Placing the package to the "Text editors and viewers" section.
    Close to "mc"
  - Updating DEVELOPERS

--- a/package/Config.in
+++ b/package/Config.in
@@ -2973,6 +2973,7 @@ menu "Text editors and viewers"
 	source "package/mg/Config.in"
 	source "package/most/Config.in"
 	source "package/nano/Config.in"
+	source "package/nnn/Config.in"
 	source "package/uemacs/Config.in"
 	source "package/vim/Config.in"
 endmenu
