--- a/package/helix/Config.in
+++ b/package/helix/Config.in
@@ -1,7 +1,7 @@
 config BR2_PACKAGE_HELIX
 	bool "helix"
 	depends on BR2_PACKAGE_HOST_RUSTC_TARGET_ARCH_SUPPORTS
-	depends on BR2_PACKAGE_HOST_RUSTC
+	select BR2_PACKAGE_HOST_RUSTC
 	help
 	  A Kakoune / Neovim inspired editor, written in Rust.
 
