package/nnn: bump to version 5.2
This commit updates the package version to 5.2.

Changelog: https://github.com/jarun/nnn/blob/v5.2/CHANGELOG

It also brings some improvements.

1. Adds libatomic dependency, as the library is required since commit
7ce4913bc39bc3b34a0e2c3de7153fb09d489152.

2. Adds a dependency on BR2_TOOLCHAIN_HAS_THREADS to prevent failures
in test-pkg.

3. Replaces a symbol in Config.in to make the file ASCII-only.

Signed-off-by: Alexander Shirokov <shirokovalexs@gmail.com>

--- a/package/nnn/Config.in
+++ b/package/nnn/Config.in
@@ -1,9 +1,11 @@
 config BR2_PACKAGE_NNN
 	bool "nnn"
 	depends on BR2_USE_MMU # fork
+	depends on BR2_TOOLCHAIN_HAS_ATOMIC
+	depends on BR2_TOOLCHAIN_HAS_THREADS
 	# Building nnn without widechar/UTF support is theoretically
 	# possible, but in practice it leads to unstable builds.
-	# That’s why the WCHAR dependency is here.
+	# That's why the WCHAR dependency is here.
 	depends on BR2_USE_WCHAR
 	select BR2_PACKAGE_NCURSES
 	select BR2_PACKAGE_NCURSES_WCHAR
